--- a/pedidosApp/appsettings.json
+++ b/pedidosApp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=Panadero\\PANCITO;Database=PedidosDB;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=Panadero\\PANCITO;Database=PedidosDB;Trusted_Connection=true;MultipleActiveResultSets=true;Encrypt=False;TrustServerCertificate=True"
   }
 }
